2004-06-17  Richard Hult  <richard@imendio.com>

	* src/planner-application.c:
	* src/planner-gantt-chart.c:
	* src/planner-gantt-view.c:
	* src/planner-print-dialog.c:
	* src/planner-task-tree.c:
	* src/planner-task-view.c:
	* src/planner-window.c: Simplify gconf code and add keys for
	critical path highlighting.

2004-06-17  Richard Hult  <richard@imendio.com>

	* src/planner-gantt-row.c (gantt_row_notify_cb): Only redraw if
	critical changed, don't update arrow positions.

	* src/planner-gantt-model.c: Improve the caching scheme (AKA make
	it work).

2004-06-17  Richard Hult  <richard@imendio.com>

	* libplanner/mrp-task-manager.c (task_manager_do_backward_pass):
	Don't set critical if it hasn't changed.

2004-06-17  Richard Hult,,,  <richard@imendio.com>

	* src/planner-gantt-model.c: (gantt_model_task_inserted_cb),
	(traverse_remove_subtree), (gantt_model_remove_subtree),
	(gantt_model_task_removed_cb), (gantt_model_reattach_subtasks),
	(gantt_model_task_moved_cb), (gantt_model_task_notify_cb),
	(traverse_insert_task_into_hash), (planner_gantt_model_new),
	(gantt_model_get_iter), (gantt_model_get_value), (dump_children),
	(value_cache_get_wbs), (value_cache_free), (value_cache_get),
	(value_cache_clear), (value_cache_set_wbs):
	* src/planner-task-tree.c: (task_tree_name_data_func),
	(task_tree_work_data_func), (task_tree_start_show_popup): Use
	accessors in even more places. Add a caching scheme and use it to
	cache the WBS string instead of generating it lots and lots of
	times.

2004-06-16  Richard Hult  <richard@imendio.com>

	* src/planner-gantt-row.c: Cache the frame gc and colors.

	* src/planner-task-dialog.c (task_dialog_pred_cell_edited): Don't
	create the predecessor twice.

	* libplanner/mrp-resource.c: (mrp_resource_get_short_name),
	(mrp_resource_set_short_name):
	* libplanner/mrp-task-manager.c: (dump_children),
	(mrp_task_manager_dump_task_list), (task_manager_calc_relation),
	(task_manager_get_task_units_intervals),